--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Login - Matka</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -22,15 +23,15 @@
             <h1>Matka</h1>
         </div>
         <div class="login-box">
-            <form class="login-form" action="dashboard.html">
+            <form class="login-form">
                 <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
                 <div class="form-group">
                     <label class="control-label">Email</label>
-                    <input class="form-control" type="text" placeholder="Email" autofocus>
+                    <input class="form-control" id="login_username" type="text" placeholder="Email" autofocus>
                 </div>
                 <div class="form-group">
                     <label class="control-label">PASSWORD</label>
-                    <input class="form-control" type="password" placeholder="Password">
+                    <input class="form-control" id="login_password" type="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <div class="utility">
@@ -43,7 +44,8 @@
                     </div>
                 </div>
                 <div class="form-group btn-container">
-                    <button class="btn btn-primary btn-block"><i class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
+                    <button type="button" onclick="handleUserLogin()" class="btn btn-primary btn-block"><i
+                            class="fa fa-sign-in fa-lg fa-fw"></i>SIGN IN</button>
                 </div>
             </form>
             <form class="forget-form" action="dashboard.html">
@@ -75,6 +77,22 @@
             $('.login-box').toggleClass('flipped');
             return false;
         });
+        // login request
+        function handleUserLogin() {
+            let username = document.getElementById('login_username').value
+            let password = document.getElementById('login_password').value
+            console.log(username, password)
+            axios.post('/matkaApplicaton/backend/login/',
+                {
+                    "username": username,
+                    "password": password
+                }
+            ).then((response) => {
+                console.log(response);
+            }, (error) => {
+                console.log(error);
+            });
+        }
     </script>
 </body>
 
