--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,9 +12,14 @@
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Login - Matka</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
+    <div class="myAlert-top alert alert-success" id="alert_div">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        Indicates a successful or positive action.
+    </div>
     <section class="material-half-bg">
         <div class="cover"></div>
     </section>
@@ -71,7 +76,10 @@
     <script src="js/main.js"></script>
     <!-- The javascript plugin to display page loading on top-->
     <script src="js/plugins/pace.min.js"></script>
+    <script src="./js/globalFunction.js"></script>
     <script type="text/javascript">
+        // onload
+        $(".myAlert-top").hide();
         // Login Page Flipbox control
         $('.login-content [data-toggle="flip"]').click(function () {
             $('.login-box').toggleClass('flipped');
@@ -79,18 +87,26 @@
         });
         // login request
         function handleUserLogin() {
+
             let username = document.getElementById('login_username').value
             let password = document.getElementById('login_password').value
-            console.log(username, password)
+            // TODO: remove matkaApplicaton
             axios.post('/matkaApplicaton/backend/login/',
                 {
                     "username": username,
                     "password": password
                 }
             ).then((response) => {
-                console.log(response);
+                console.log(response)
+                if (response.status === 200) {
+                    showAlert('success', response.data?.msg)
+                    location.href = "dashboard.html";
+                } else {
+                    showAlert('danger', response.data?.msg)
+                }
             }, (error) => {
-                console.log(error);
+                console.log('error', error);
+                showAlert('danger', 'Something went wrong! Please try again.')
             });
         }
     </script>
