Change file name

--- a/frontend/matka.html
+++ b/frontend/matka.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Welcome to matkaApplicaton
-    <h6><a href="login.html">Open </a> in mobile device</h6>
+    <h6><a href="index.html">Open </a> in mobile device</h6>
 </body>
 </html>
