--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -117,7 +117,7 @@
         </div>
         <ul class="app-menu">
             <li><a class="app-menu__item active" href="dashboard.html"><i
-                        class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Home</span></a>
+                        class="app-menu__icon fa fa-home"></i><span class="app-menu__label">Home</span></a>
             </li>
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
                         class="app-menu__icon fa fa-history"></i><span class="app-menu__label">History</span><i
@@ -137,10 +137,10 @@
                     </li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="withdrawal.html"><i class="app-menu__icon fa fa-asterisk"></i><span
+            <li><a class="app-menu__item" href="withdrawal.html"><i class="app-menu__icon fa fa-money"></i><span
                         class="app-menu__label">Withdrawal</span></a></li>
             <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i
-                        class="app-menu__icon fa fa-question-circle"></i><span class="app-menu__label">Help</span><i
+                        class="app-menu__icon fa fa-handshake-o"></i><span class="app-menu__label">Help</span><i
                         class="treeview-indicator fa fa-angle-right"></i></a>
                 <ul class="treeview-menu">
                     <li><a class="treeview-item" href="form-components.html"><i class="icon fa fa-circle-o"></i> Form
@@ -153,7 +153,7 @@
                             Rules Board</a></li>
                 </ul>
             </li>
-            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-phone"></i><span
+            <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-headphones"></i><span
                         class="app-menu__label">Contact Us</span></a></li>
             <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-share-alt"></i><span
                         class="app-menu__label">Share with Friends</span></a></li>
@@ -173,8 +173,18 @@
                 <h6 id="upcoming_tab" onclick="updateTab('upcoming');">UPCOMING</h6>
             </div>
         </div>
-        <div id="ongoing_tab_content">
-            <h1>Ths is ongoing</h1>
+        <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
+            <div class="ongoing_card">
+                <img src="./assets/shapes/ongoingRectangle.svg" alt="Ongoing card">
+                <h4>Game Name</h4>
+                <div>
+                    <p><span>X</span><span>X</span><span style="margin-left: 5px;" >X</span><span>X</span><span style="margin-right: 5px;" >X</span><span>X</span><span>X</span>
+                    </p>
+                </div>
+            </div>
+            <div class="col-12">
+                card 1
+            </div>
         </div>
         <div id="upcoming_tab_content" class="d-none">
             <h1>This is upcoming</h1>
