--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Login - Matka</title>
+    <title>Login - Arena</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
@@ -35,14 +35,14 @@
     </section>
     <section class="login-content">
         <div class="logo">
-            <h1>Matka</h1>
+            <h1>Arena</h1>
         </div>
         <div class="login-box">
             <form class="login-form">
                 <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>SIGN IN</h3>
                 <div class="form-group">
-                    <label class="control-label">Email</label>
-                    <input class="form-control" id="login_username" type="text" placeholder="Email" autofocus>
+                    <label class="control-label">USERNAME</label>
+                    <input class="form-control" id="login_username" type="text" placeholder="username" autofocus>
                 </div>
                 <div class="form-group">
                     <label class="control-label">PASSWORD</label>
@@ -100,8 +100,8 @@
             startLoader()
             let username = document.getElementById('login_username').value
             let password = document.getElementById('login_password').value
-            // TODO: remove matkaApplicaton
-            axios.post('/matkaApplicaton/backend/login/',
+            // TODO: remove gameApplication
+            axios.post('/gameApplication/backend/login/',
                 {
                     "username": username,
                     "password": password
