FIx redirect issue

--- a/frontend/matka.html
+++ b/frontend/matka.html
@@ -18,6 +18,9 @@
     </div>
     Welcome to matkaApplicaton
     <h6><a href="index.html">Open </a> in mobile device</h6>
+    <script>
+        console.log(window.location,'')
+    </script>
 </body>
 
 </html>
