Dashboard card modification completed

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -179,205 +179,57 @@
         <div class="home_page_main_container">
             <div id="ongoing_tab_content" class="d-flex justify-content-center flex-column">
                 <div class="ongoing_card">
-                    <img src="./assets/shapes/ongoingRectangle.svg" alt="Ongoing card">
+                    <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
+                    <small><b>XXX - XX - XXX</b></small>
                     <div>
-                        <div class="result_box_home">
-                            <p><span>X</span><span>X</span><span style="margin-left: 5px;">X</span><span>X</span><span
-                                    style="margin-right: 5px;">X</span><span>X</span><span>X</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box"><b><img src="./assets/shapes/timeremain.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;"><br />5hrs 40min
-                                left</b>
-                        </div>
+                        <small>Open time - 2:30 PM</small>
+                        <small class="text-danger">5 hrs 40 min left</small>
+                        <small>Close time- 3:00 PM</small>
                     </div>
                 </div>
                 <div class="ongoing_card">
-                    <img src="./assets/shapes/ongoingRectangle.svg" alt="Ongoing card">
+                    <img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn" alt="Game play">
                     <h4>Game Name</h4>
+                    <small><b>XXX - XX - XXX</b></small>
                     <div>
-                        <div class="result_box_home">
-                            <p><span>X</span><span>X</span><span style="margin-left: 5px;">X</span><span>X</span><span
-                                    style="margin-right: 5px;">X</span><span>X</span><span>X</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box"><b><img src="./assets/shapes/timeremain.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;"><br />5hrs 40min
-                                left</b>
-                        </div>
+                        <small>Open time - 2:30 PM</small>
+                        <small class="text-danger">5 hrs 40 min left</small>
+                        <small>Close time- 3:00 PM</small>
                     </div>
                 </div>
                 <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.svg" alt="Ongoing card">
+                    <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn" alt="Game play">
                     <h4>Game Name</h4>
+                    <small><b>123 - 45 - 123</b></small>
                     <div>
-                        <div class="result_box_home">
-                            <p><span>2</span><span>3</span><span style="margin-left: 5px;">9</span><span>6</span><span
-                                    style="margin-right: 5px;">6</span><span>8</span><span>9</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/closegame.webp" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">CLOSED</b>
-                        </div>
+                        <small>Open time - 2:30 PM</small>
+                        <small>Close time- 3:00 PM</small>
                     </div>
                 </div>
                 <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.svg" alt="Ongoing card">
+                    <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
+                    <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn" alt="Game play">
                     <h4>Game Name</h4>
+                    <small><b>123 - 45 - 123</b></small>
                     <div>
-                        <div class="result_box_home">
-                            <p><span>2</span><span>3</span><span style="margin-left: 5px;">9</span><span>6</span><span
-                                    style="margin-right: 5px;">6</span><span>8</span><span>9</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/closegame.webp" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">CLOSED</b>
-                        </div>
+                        <small>Open time - 2:30 PM</small>
+                        <small>Close time- 3:00 PM</small>
                     </div>
                 </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/ongoingRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>X</span><span>X</span><span style="margin-left: 5px;">X</span><span>X</span><span
-                                    style="margin-right: 5px;">X</span><span>X</span><span>X</span>
 
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box"><b><img src="./assets/shapes/timeremain.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;"><br />5hrs 40min
-                                left</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/ongoingRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>X</span><span>X</span><span style="margin-left: 5px;">X</span><span>X</span><span
-                                    style="margin-right: 5px;">X</span><span>X</span><span>X</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box"><b><img src="./assets/shapes/timeremain.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;"><br />5hrs 40min
-                                left</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>2</span><span>3</span><span style="margin-left: 5px;">9</span><span>6</span><span
-                                    style="margin-right: 5px;">6</span><span>8</span><span>9</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/closegame.webp" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">CLOSED</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card">
-                    <img src="./assets/shapes/closeRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>2</span><span>3</span><span style="margin-left: 5px;">9</span><span>6</span><span
-                                    style="margin-right: 5px;">6</span><span>8</span><span>9</span>
-
-                            </p>
-                        </div>
-                        <img src="./assets/shapes/gameplaybtn.webp" alt="Game play">
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/closegame.webp" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">CLOSED</b>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div id="upcoming_tab_content" class="d-none">
-                <div class="ongoing_card upcoming_combo">
-                    <img src="./assets/shapes/upcomingRectangle.svg" alt="Ongoing card">
+                <div class="ongoing_card upcoming_card">
+                    <img src="./assets/shapes/upcomingRectangle.svg" class="game_card_label" alt="Ongoing card">
                     <h4>Game Name</h4>
+                    <p><img src="./assets/shapes/setReminder.svg" />Set Reminder</p>
                     <div>
-                        <div class="result_box_home">
-                            <p><span>0</span><span>5</span><span style="margin-left: 8px;">3</span><span
-                                    style="margin-right: 8px;">0</span><span>P</span><span>M</span>
-
-                            </p>
-                        </div>
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/setReminder.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">Set Reminder</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card upcoming_combo">
-                    <img src="./assets/shapes/upcomingRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>0</span><span>5</span><span style="margin-left: 8px;">3</span><span
-                                    style="margin-right: 8px;">0</span><span>P</span><span>M</span>
-
-                            </p>
-                        </div>
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/setReminder.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">Set Reminder</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card upcoming_combo">
-                    <img src="./assets/shapes/upcomingRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>0</span><span>5</span><span style="margin-left: 8px;">3</span><span
-                                    style="margin-right: 8px;">0</span><span>P</span><span>M</span>
-
-                            </p>
-                        </div>
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/setReminder.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">Set Reminder</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="ongoing_card upcoming_combo">
-                    <img src="./assets/shapes/upcomingRectangle.svg" alt="Ongoing card">
-                    <h4>Game Name</h4>
-                    <div>
-                        <div class="result_box_home">
-                            <p><span>0</span><span>5</span><span style="margin-left: 8px;">3</span><span
-                                    style="margin-right: 8px;">0</span><span>P</span><span>M</span>
-
-                            </p>
-                        </div>
-                        <div class="home_time_box" style="padding-top: 10px;"><b><img
-                                    src="./assets/shapes/setReminder.svg" alt="TIme remain"
-                                    style="height: 15px; width: 15px;">Set Reminder</b>
-                        </div>
+                        <small>Open time - 2:30 PM</small>
+                        <small>Close time- 3:00 PM</small>
                     </div>
                 </div>
             </div>
